# crewai-mcp

./: README.md  simple_test_server.py
summarizer_server/: .env.example  pyproject.toml
summarizer_server/src/summarizer_server/: crew.py  main.py  research_crew.py  server.py
summarizer_server/src/summarizer_server/config/: agents.yaml  researcher_agents.yaml  researcher_tasks.yaml  tasks.yaml
